[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "jupyter>=1.1.1",
    "langflow>=1.7.2",
    "llama-index>=0.12.42",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-vector-stores-chroma>=0.4.2",
    "pypdf>=5.1.0",
    "reportlab>=4.4.9",
    "requests>=2.32.5",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]
